@@ -1,3 +1,8 @@
+Fri Mar 18 11:11:07 2005  George Lebl <jirka@5z.com>
+
+	* src/graphing.c, src/funclib.[ch]: Allow drawing longer lines with
+	  LinePlotDrawLine by passing in a matrix of points.
+
 Tue Feb 08 18:18:18 2005  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: deal with closing of the graph window when we're
